Comentarios e ajustes no ReadME

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": {
+  "ConnectionStrings": { // Ajusta a string de conexão conforme necessário para o seu servidor de banco de dados e credenciais
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SeguroViagemDb;Trusted_Connection=True;"
   },
   "Logging": {
